<resources>
    <string name="app_name">Cheems_Tour</string>
    <string name="view_map">View Map</string>
    <string name="form_name">name</string>
    <string name="form_city">City</string>
    <string name="form_save">save</string>
    <string name="form_map">Add trip locaction</string>
    <string name="Weather">Your real-time weather</string>
    <string name="English">🇺🇸 English</string>
    <string name="Spanish">mx Español</string>
    <string name="Portuguese">🇧🇷 Portuguese</string>
    <string name="Language">Language</string>
    <string name="Spanish_English">🌐 ES / EN</string>
</resources>